Do not clear and recreate the system tray popup menu every time

Just update the "New Messages In" submenu, or disable it if there are no
new messages.  Avoids the menu popping up at the wrong screen position.

BUG:421275