src/kmsystemtray.h
@@ -58,6 +58,7 @@ private:
     Q_REQUIRED_RESULT bool buildPopupMenu();
     void fillFoldersMenu(QMenu *menu, const QAbstractItemModel *model, const QString &parentName = QString(), const QModelIndex &parentIndex = QModelIndex());
     int mDesktopOfMainWin = 0;
+    bool mBuiltContextMenu = false;
 
     bool mHasUnreadMessage = false;
     bool mIconNotificationsEnabled = true;
